--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ mgltools_x86_64Linux2_1.5.6/*
 fragmlm/weights/*
 output/*
 *.pyc
+FragEvo_output_compscore/*
+*.pdbqtqt
+autogrow/docking/docking_executables/q_vina_2/q_vina_2_1_linux/qvina02
